dracut: Add Fedora virtio kernel modules to the initrd
Signed-off-by: Fabiano Fidêncio <fidencio@redhat.com>

--- a/dracut/dracut.conf.d/10-drivers.conf
+++ b/dracut/dracut.conf.d/10-drivers.conf
@@ -6,4 +6,7 @@
 # Specify a space-separated set of kernel modules to copy from the host to 
 # the initramfs image. For example:
 # drivers="9p 9pnet 9pnet_virtio"
-drivers=""
+#drivers=""
+
+# Fedora: add kata virtio modules to the initrd.
+drivers="vmw_vsock_virtio_transport virtio_console virtio_blk virtio_scsi virtio_net fuse virtiofs"
